# medieval-dominion-networks

./: .gitignore  Makefile  README.md  pyproject.toml
config/: main.yaml
notebooks/: 0.01-initial-exploration.ipynb  0.03-explore-temporal-networks.ipynb  1.01-analysis-for-asrec-presentation.ipynb  1.01-exploration.ipynb  1.02-export-communities.ipynb  1.02-weighted-network.ipynb  1.03-temporal-networks.ipynb  2.01-weighted-network-for-presentation.ipynb
src/: network.py  temporal_network.py  weighted_network.py
src/utils/: styling.py
